<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_now_playing" android:icon="@drawable/ic_now_playing"
            android:title="@string/nav_now_playing" android:checked="true" />
        <item android:id="@+id/nav_library" android:icon="@drawable/ic_library"
            android:title="@string/nav_library" />
        <item android:id="@+id/nav_playlist" android:icon="@drawable/ic_playlist"
            android:title="@string/nav_playlist" />
        <item android:id="@+id/nav_favorites" android:icon="@drawable/ic_star"
            android:title="@string/nav_favorites" />
        <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>
</menu>
